--- a/css/main.css
+++ b/css/main.css
@@ -95,58 +95,105 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+
 html {
-  background-color: #fff;
+  background-color: #222;
+  font-size: 16px;
   height: 100%;
-  width: 100%;
 }
 
 body {
-  font-family: 'Source Sans Pro', sans-serif;
-  padding: 0 2em;
-  font-size: 1.25em;
+  font-family: 'Montserrat', sans-serif;
+  padding: 2em;
+  font-size: 1em;
   height: 100%;
   color: #fff;
 }
 
-header,
-footer {
-  background-color: #222;
-  height: 80px;
-  width: 100%;
-}
+header {
 
-main {
-  background-color: #ccc;
-  height: 250px;
-  width: 100%;
-}
-
-header,
-footer,
-main {
-
-}
-
-.flex-container {
+     font-family: 'Raleway', sans-serif;
+     font-size: 4em;
+     height: 100px;
+     width: 100%;
      display: flex;
-     justify-content: space-between;
+     justify-content: flex-start;
      align-items: center;
-     flex-flow: row wrap;
+     padding: 10px 25px;
 
 }
 
-.flex-items {
+main {
+     height: 100px;
+     width: 100%;
+     display: flex;
+     justify-content: flex-start;
+     align-items: center;
+     padding: 10px 20px;
+     font-size: 1.75em;
+     border-bottom: solid 1px pink;
+}
+
+.wrapper {
+  /*add display:flex and set justify-content to space-between*/
+  font-weight: 500;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+ align-items: center;
+ flex-flow: row wrap;
+}
+
+.div-1, .div-2, .div-3 {
+  /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
   color: #fff;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
+  font-size: 1.25em;
+  height: 250px;
   width: 30%;
-  height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 10px 10px;
+  margin: 20px 5px;
+}
 
+.div-1 {
+     background-color: #f294c0;
+
+}
+.div-2 {
+     background-color: #f266a7;
+     flex-shrink: 5;
+}
+
+.div-3 {
+     background-color: #f25caf;
+}
+
+footer {
+     height: 100px;
+     width: 100%;
+     display: flex;
+     justify-content: flex-start;
+     align-items: flex-start;
+     border-top: solid 1px pink;
+
+}
+
+footer ul {
+     margin-left: 0;
+}
+
+footer ul li {
+     display: inline;
+     font-size: 1.5em;
+     font-weight: 300;
+     margin-left: 0;
+}
+
+footer i {
+     padding-right: 15px;
 }
 
 /* ==========================================================================
@@ -228,18 +275,6 @@ main {
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
-
-/* If you'd like to try a different layout on Desktop and larger screens: */
-@media (min-width: 1200px) {
-  #div-1,
-  #div-2{
-      /* set your flex value to 1 50% */
-  }
-
-  #div-3 {
-    /* set your flex value to 1 100% */
-  }
-}
 
 @media print,
        (-webkit-min-device-pixel-ratio: 1.25),
